--- a/window.html
+++ b/window.html
@@ -206,7 +206,7 @@
                 Extract
             </button>
             <button id="writeBtn" class="btn btn-disabled" onclick="saveBtn()" disabled>
-                    Write
+                Write
             </button>
         </ul>
 
@@ -328,6 +328,10 @@
             ipcRenderer.on('load', function (e, data) {
                 // img.setAttribute('src', data)
                 document.querySelector('#imgCover').style.backgroundImage = 'url(' + data + ')';
+                document.querySelector('#extractBtn').classList.remove('btn-disabled');
+                document.querySelector('#writeBtn').classList.remove('btn-disabled');
+                document.querySelector('#extractBtn').disabled = false;
+                document.querySelector('#writeBtn').disabled = false;
             })
 
             ipcRenderer.on('textRead', function (e, text) {
