--- a/window.html
+++ b/window.html
@@ -329,7 +329,7 @@
 
             ipcRenderer.on('load', function (e, data) {
                 //img.setAttribute('src', data)
-                document.querySelector('#imgCover').style.backgroundImage = 'url(' + data + ')';
+                document.querySelector('#imgCover').style.backgroundImage = 'url(' + encodeURI(data) + ')';
                 document.querySelector('#extractBtn').classList.remove('btn-disabled');
                 document.querySelector('#writeBtn').classList.remove('btn-disabled');
                 document.querySelector('#extractBtn').disabled = false;
