--- a/window.html
+++ b/window.html
@@ -26,7 +26,7 @@
 
                 // set of random parametric filters (totally arbitrary) on cover (default) image(s)
 
-                ranDeg = Math.floor(Math.random()*360)
+                ranDeg = Math.floor(Math.random()*320)
                 contrast = 65 + Math.floor(Math.random()*70);
                 pcInvert = (70 + Math.floor(Math.random()*100)/2)%100
                 
@@ -229,7 +229,8 @@
         <!-- <div class="window-content"> -->
 
             <!-- image cover -->
-            <div id="imgCover" class="imageCover" style="transition: filter 0s;"></div>
+            <!-- <div id="imgCover" class="imageCover" style="transition: filter 3s;"></div> -->
+            <div id="imgCover" class="imageCover" style=""></div>
             
             <ul id="topBar">
                 <center>
