--- a/window.html
+++ b/window.html
@@ -308,7 +308,7 @@
                         <div class="tab-flex-container hidden" id="filesBtns">
                             <button class="btn btn-rounded" onclick="addBtn()">Add</button>
                             <button class="btn btn-rounded" onclick="filesTable.clear()">Clear</button>
-                            <button class="btn btn-rounded" onclick="readBtn()">Read</button>
+                            <button class="btn btn-rounded" onclick="readBtn()">Extract</button>
                         </div>
 
                         <!-- File list -->
