disabling invert filter on image cover animation

--- a/window.html
+++ b/window.html
@@ -46,7 +46,8 @@
                 // set of random parametric filters (totally arbitrary) on cover (default) image(s)
                 ranDeg = Math.floor(Math.random()*320)
                 contrast = 80 + Math.floor(Math.random()*70);
-                pcInvert = (70 + Math.floor(Math.random()*100)/2)%100
+                // pcInvert = (70 + Math.floor(Math.random()*100)/2)%100
+                pcInvert = 0;
                 
                 // rand select from css/bg folder
                 wallpaperNumber = Math.ceil(Math.random()*20);
