Testing opendialog blocking for hidle-ready

--- a/window.html
+++ b/window.html
@@ -26,10 +26,10 @@
             }
             
             function idleOff() {
-                setTimeout(function(){ 
-                    console.log('closing loading overlay');
+                //setTimeout(function(){ 
+                //    console.log('closing loading overlay');
                     hide(document.querySelector('#overlay'));
-                }, 1000);
+                //}, 7000);
 
                 // clearTimeout(delay);
             }
