--- a/window.html
+++ b/window.html
@@ -5,6 +5,7 @@
         <!-- Stylesheets -->
         <!-- <link rel="stylesheet" href="css/photon.min.css"> -->
         <link rel="stylesheet" href="css/main.css">
+        <link href="https://fonts.googleapis.com/css?family=Rubik:400,500,700&display=swap" rel="stylesheet">
         <!-- <link rel="stylesheet" href="css/main.min.css"> -->
 
         <!-- <script src="js/ui.js"></script> -->
