Sistemati i binding dei tasti con le azioni ignorando i blocking

--- a/window.html
+++ b/window.html
@@ -322,7 +322,7 @@
                         <div class="tab-flex-container hidden" id="filesBtns">
                             <button class="btn btn-rounded" onclick="addBtn()">Add</button>
                             <button class="btn btn-rounded" onclick="filesTable.clear()">Clear</button>
-                            <button class="btn btn-rounded" onclick="blocking(readBtn)()">Extract</button>
+                            <button class="btn btn-rounded" onclick="readBtn()">Extract</button>
                         </div>
 
                         <!-- File list -->
